# vcpkg_examples

./: .clinerules  .gitignore  LICENSE  README.md
src/helloworld/: vcpkg-configuration.json
src/vcpkg-sample-library/: PROJECT_STRUCTURE.md  README.md  TEST_RESULTS.md  usage
src/vcpkg-sample-library/example/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
